team-app/main/default/objects/Pipeline_Review_Run__c/Pipeline_Review_Run__c.object-meta.xml
<CustomObject>
    <description>One generation run so interrupted jobs resume from Pending/Failed items.</description>
    <label>Pipeline Review Run</label>
    <pluralLabel>Pipeline Review Runs</pluralLabel>
    <nameField>
        <displayFormat>PRR-{000000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>