team-app/main/default/objects/Pipeline_Review_Run__c/fields/Async_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Id__c</fullName>
    <description>18-character AsyncApexJob Id for this run.</description>
    <inlineHelpText>Batch Apex job id.</inlineHelpText>
    <label>Async Job Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>