team-app/main/default/objects/Pipeline_Review_Run__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description>Succeeded item count.</description>
    <inlineHelpText>Succeeded items.</inlineHelpText>
    <label>Completed</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>