team-app/main/default/objects/Pipeline_Review_Run__c/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <description>Failed item count.</description>
    <inlineHelpText>Failed items.</inlineHelpText>
    <label>Failed</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>