team-app/main/default/objects/Pipeline_Review_Run__c/fields/Finished_At__c.field-meta.xml
<CustomField>
    <fullName>Finished_At__c</fullName>
    <description>Run end timestamp.</description>
    <inlineHelpText>When the run finished or failed.</inlineHelpText>
    <label>Finished At</label>
    <type>DateTime</type>
</CustomField>