team-app/main/default/objects/Pipeline_Review_Run__c/fields/Input_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Input_Tokens__c</fullName>
    <description>Token accounting for the run.</description>
    <inlineHelpText>Anthropic input tokens.</inlineHelpText>
    <label>Input Tokens</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>