team-app/main/default/objects/Pipeline_Review_Run__c/fields/Scope_Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>Scope_Filter_JSON__c</fullName>
    <description>JSON of the filter scope so a resume uses the same set.</description>
    <inlineHelpText>Serialized filter that defined this run.</inlineHelpText>
    <label>Scope Filter JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>