team-app/main/default/objects/Pipeline_Review_Run__c/fields/Skipped__c.field-meta.xml
<CustomField>
    <fullName>Skipped__c</fullName>
    <description>Skip count reported in the UI.</description>
    <inlineHelpText>Unchanged deals skipped by Job B.</inlineHelpText>
    <label>Skipped</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>