team-app/main/default/objects/Pipeline_Review_Run__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>Run start timestamp.</description>
    <inlineHelpText>When the run left Queued.</inlineHelpText>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>