team-app/main/default/objects/Pipeline_Review_Run__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Count of run items created.</description>
    <inlineHelpText>Opportunities in scope.</inlineHelpText>
    <label>Total</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>